# MovingShapes

./: .gitignore  LICENSE  README.md  examples.ipynb  moving_shapes.py  pyproject.toml
charades/: 1-character-labels.txt  2-character-labels.txt  readme.txt
charades/1-character-data/accelerate/: 1266.txt  1543.txt  1559.txt  1806.txt  1868.txt  1952.txt  1965.txt  225.txt  246.txt  2597.txt  2674.txt  2678.txt  2717.txt  2792.txt  2871.txt  3162.txt  3228.txt  3402.txt  3454.txt  3475.txt  3501.txt  3573.txt  3596.txt  3725.txt  3745.txt  3758.txt  3857.txt  3887.txt  3896.txt  (+28 more)
examples/: examples.ipynb  load_data.py  save_movie.py
iec/: ids.txt
iec/data/: 7758.txt  7759.txt  7760.txt  7761.txt  7780.txt  7786.txt  7787.txt  7791.txt  7797.txt  7798.txt  7802.txt  7803.txt  7807.txt  7808.txt  7814.txt  7815.txt  7819.txt  7820.txt  7821.txt  7822.txt  7823.txt  7824.txt  7825.txt  7830.txt  7831.txt  7836.txt  7838.txt  7840.txt  7841.txt  7842.txt  7844.txt  7845.txt  7846.txt  7847.txt  7848.txt  7849.txt  7850.txt  7852.txt  7854.txt  7855.txt  (+45 more)
src/movingshapes/: __init__.py  movie.py  moving_shapes.py
trianglecopa/: readme.txt
trianglecopa/data/: 6640.txt  6641.txt  6643.txt  6648.txt  6651.txt  6654.txt  6655.txt  6656.txt  6657.txt  6658.txt  6661.txt  6667.txt  6670.txt  6672.txt  6674.txt  6675.txt  6676.txt  6679.txt  6680.txt  6681.txt  6682.txt  6683.txt  6684.txt  6685.txt  6686.txt  6687.txt  6689.txt  6692.txt  6693.txt  6695.txt  6697.txt  6698.txt  6699.txt  6700.txt  6701.txt  6706.txt  6707.txt  6708.txt  6711.txt  6712.txt  (+20 more)
util/: movie.py
(+3949 files in other folders)
